[package]
name = "tensor-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
candle-core = { version = "0.3.1", features = ["cuda"] }
candle-kernels = "0.3.1"
cudarc = { version = "0.9.14", features = ["f16"] }
gemm = { version = "0.16.6", features = ["wasm-simd128-enable"] }
half = { version = "2.3.1", features = ["num-traits", "use-intrinsics", "rand_distr"] }
intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"] }
libc = "0.2.151"
memmap2 = { version = "0.7.1", features = ["stable_deref_trait"] }
num-traits = "0.2.17"
num_cpus = "1.16.0"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.8.0"
safetensors = "0.4.1"
thiserror = "1.0.50"
yoke = { version = "0.7.2", features = ["derive"] }
zip = { version = "0.6.6", default-features = false }
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "4.2.4", features = ["derive"] }